加上自定义时间条